...

    <string name="bmi_main_height_in">Height [in]:</string>
    <string name="bmi_main_mass_lb">Mass [lb]:</string>

    <string name="bmi_main_count">Count</string>
    <string name="bmi_main_range_underweight">UNDERWEIGHT</string>
    <string name="bmi_main_range_healthy">HEALTHY</string>
    <string name="bmi_main_range_overweight">OVERWEIGHT</string>
    <string name="bmi_main_range_obesity">OBESITY</string>
    <string name="bmi_main_range_severe_obesity">SEVERE OBESITY</string>


    <string name="bmi_menu_about_me">About me</string>
...
